--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,43 +1,34 @@
 services:
-  web:
-    image: nginx:1.26.0
+  mqtt-broker:
+    image: eclipse-mosquitto
+    container_name: mosquitto
+    ports:
+      - "1884:1883"
+      - "9002:9001"
     volumes:
-      - ./app/web:/usr/share/nginx/html
+      - ./mosquitto:/mosquitto/config:rw
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
     ports:
       - "8080:80"
-
-  mosquitto:
-    image: eclipse-mosquitto:2.0
+      - "4443:443"
     volumes:
-      - ./mosquitto/mosquitto.conf:/mosquitto/config/mosquitto.conf
-    ports:
-      - "1883:1883"
+      - ./nginx:/usr/share/nginx/html
+    restart: unless-stopped
 
-  db:
+  mysql:
     image: mysql:8.0
+    container_name: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
-      MYSQL_DATABASE: parksmart
+      MYSQL_DATABASE: ParkSmart
       MYSQL_USER: admin
       MYSQL_PASSWORD: admin
-    volumes:
-      - ./db:/docker-entrypoint-initdb.d
     ports:
       - "3306:3306"
-
-  app:
-    build: ./app
     volumes:
-      - ./app:/app
-    command: python /app/python/start.py
-    depends_on:
-      - db
-    links:
-      - db
-      - mosquitto
-    ports:
-      - "2000:2000"
-
-networks:
-  custom_network:
-    driver: bridge
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init_db.sql
+    restart: unless-stopped
