feat: Backend with PHP

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,10 +1,15 @@
 server {
-    listen 8080;
-    server_name ParkSmart;
-
-    root /var/www/mywebsite/static;
+    listen 80;
+    
+    location /api/ {
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME /var/www/html/api/index.php;
+        include fastcgi_params;
+    }
 
     location / {
-        autoindex on;
+        root /usr/share/nginx/html;
+        index index.html;
     }
 }
