--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,8 @@ services:
     container_name: mosquitto
     ports:
       - "1884:1883"
-      - "9002:9001"
     volumes:
       - ./mosquitto:/mosquitto/config:rw
-    restart: unless-stopped
-
-  nginx:
-    image: nginx:alpine
-    container_name: nginx
-    ports:
-      - "8080:80"
-      - "4443:443"
-    volumes:
-      - ./nginx:/usr/share/nginx/html
     restart: unless-stopped
 
   mysql:
@@ -31,4 +20,28 @@ services:
       - "3306:3306"
     volumes:
       - ./db/init.sql:/docker-entrypoint-initdb.d/init_db.sql
+    restart: unless-stopped
+
+  nginx:
+    image: nginx:alpine
+    container_name: nginx
+    ports:
+      - "80:80"
+    depends_on:
+      - php
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend:/usr/share/nginx/html
+      - ./backend:/var/www/html
+    restart: unless-stopped
+
+  php:
+    build: ./php
+    container_name: php
+    volumes:
+      - ./php:/var/www/html
+    ports:
+      - "9000:9000"
+    depends_on:
+      - mysql
     restart: unless-stopped
